minor edits to titles
added title to the pages

--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <title>Forgot Password</title>
     <h1>Forgot Password</h1>
   </head>
   <body>
