--- a/register.html
+++ b/register.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <h1>Register</h1>
+    <title>Register Page</title>
+    <h1>Register a new account</h1>
   </head>
   <body>
     <form action="/registerConfirmation.html">
