--- a/loginSuccessful.html
+++ b/loginSuccessful.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <h1>Comp 424 Project</h1>
+    <title>Login Successful</title>
   </head>
 
   <body>
