--- a/prettyHomePage.html
+++ b/prettyHomePage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Login Page</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
@@ -156,7 +157,8 @@ span.psw {
   <form class="modal-content animate" action="/action_page.php" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <img src="img_avatar2.png" alt="Avatar" class="avatar">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBc6w1uSMX4KRe3ymhUfTt7epM_UWjPMii-w&amp;usqp=CAU" alt="Avatar" class="avatar" style="width:225px;height:225px;">
+
     </div>
 
     <div class="container">
