--- a/loginSuccessful.html
+++ b/loginSuccessful.html
@@ -10,7 +10,7 @@
     <h1>Login Successful</h1>
     <!-- TODO: -->
     <!-- $[variable name] need to change those to variable names to bring back the data -->
-    <h2>Hello $UserName</h2>
+    <h2>Hello $FirstName $LastName,</h2>
     <p>You have logged in $TimesLoggedIn times and you last logged in at $LastLoggedInDate</p>
     <button>Download Confidential Data</button>
   </body>
