--- a/register.html
+++ b/register.html
@@ -114,7 +114,7 @@ hr {
   <head>
     <meta charset="utf-8">
     <title>Register Page</title>
-    <h1>Register a new account</h1>
+    <!-- <h1>Register for a new account</h1> -->
   </head>
   <body>
     <form action="/registerConfirmation.html" method="post">
