--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
 /* Full-width input fields */
-input[type=text], input[type=password], input[type=date] {
+input[type=text], input[type=password], input[type=date], input[type=email] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -117,7 +117,7 @@ hr {
     <!-- <h1>Register for a new account</h1> -->
   </head>
   <body>
-    <form action="/registerConfirmation.html" method="post">
+    <form action="/registerConfirmation.html" method="post" name="form">
       <div class="container">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
@@ -130,7 +130,7 @@ hr {
       <input type="text" placeholder="Enter Last Name" name="lname" required>
 
       <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      <input type="email" placeholder="Enter Email" name="email" required>
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
