--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -119,8 +119,8 @@ hr {
   <body>
     <form action="/action_page.php">
       <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
+      <h1>Forgot Password</h1>
+      <p>Please enter your email to retrieve your password.</p>
       <hr>
       <label for="email"><b>Email</b></label>
       <input type="email" placeholder="Enter Email" name="email" required>
