--- a/html/login.html
+++ b/html/login.html
@@ -166,7 +166,7 @@ span.psw {
 
 <div id="id01" class="modal">
 
-  <form class="modal-content animate" action="/action_page.php" method="post">
+  <form class="modal-content animate" action="/login.php" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBc6w1uSMX4KRe3ymhUfTt7epM_UWjPMii-w&amp;usqp=CAU" alt="Avatar" class="avatar" style="width:225px;height:225px;">
