--- a/html/loginSuccessful.html
+++ b/html/loginSuccessful.html
@@ -10,7 +10,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Set a style for all buttons */
 button {
-  background-color: #4CAF50;
+  background-color: #4E7500;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
