change main button color

--- a/html/register.html
+++ b/html/register.html
@@ -22,7 +22,7 @@ input[type=text]:focus, input[type=password]:focus {
 
 /* Set a style for all buttons */
 button {
-  background-color: #4CAF50;
+  background-color:  #4E7500;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
