changing file directs
line 191 & line 195

--- a/html/login.html
+++ b/html/login.html
@@ -188,11 +188,11 @@ span.psw {
     <div class="container" style="background-color:#f1f1f1">
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
 
-      <a style="text-decoration:none;" href="forgot.php">
+      <a style="text-decoration:none;" href="forgot.html">
         <button type="button" class="forgotPassBtn" onclick="document.getElementById('myform').reset();">Forgot password?</button>
       </a>
 
-      <a style="text-decoration:none;" href="register.php">
+      <a style="text-decoration:none;" href="register.html">
         <button type="button" class="createAccBtn" style="float: right;">Create Account</button>
       </a>
     </div>
