--- a/html/forgot.html
+++ b/html/forgot.html
@@ -118,7 +118,7 @@ hr {
   </head>
   <body>
     <div class="container">
-      <form action="/action_page.php">
+      <form action="/forgot.php">
         <h1>Forgot Password</h1>
         <p>Please enter your email to retrieve your password.</p>
         <hr>
