--- a/html/register.html
+++ b/html/register.html
@@ -117,7 +117,7 @@ hr {
     <!-- <h1>Register for a new account</h1> -->
   </head>
   <body>
-    <form action="/registerConfirmation.html" method="post" name="form">
+    <form action="/success.html" method="post" name="form">
       <div class="container">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
@@ -148,7 +148,7 @@ hr {
       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Conditions</a>.</p>
 
       <div class="clearfix">
-        <a style="text-decoration:none;" href="HomePage.html">
+        <a style="text-decoration:none;" href="login.html">
           <button type="button" class="cancelbtn">Cancel</button>
         </a>
         <button type="submit" class="signupbtn">Sign Up</button>
