--- a/html/success.html
+++ b/html/success.html
@@ -44,7 +44,7 @@
 	<main>
 		<body>		
 			<p>You Have Been Successfully Registered.</p>
-			<p><button onclick="location.href='../login.php'">CLICK HERE TO LOGIN</button>
+			<p><button onclick="location.href='../login.html'">CLICK HERE TO LOGIN</button>
 		</body>
 	</main>
 </html>
