--- a/html/register.html
+++ b/html/register.html
@@ -148,7 +148,7 @@ hr {
       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Conditions</a>.</p>
 
       <div class="clearfix">
-        <a style="text-decoration:none;" href="HomePage.html">
+        <a style="text-decoration:none;" href="login.html">
           <button type="button" class="cancelbtn">Cancel</button>
         </a>
         <button type="submit" class="signupbtn">Sign Up</button>
