--- a/html/register.html
+++ b/html/register.html
@@ -104,72 +104,225 @@ hr {
   display: table;
 }
 
+.form input[type=submit]:hover,.form input[type=submit]:active,.form input[type=submit]:focus {
+background: #017daf;
+}
+.form .message {
+margin: 15px 0 0;
+color: #b3b3b3;
+font-size: 12px;
+}
+.form .message a {
+color: #017daf;
+text-decoration: none;
+}
+
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
   .cancelbtn, .signupbtn {
      width: 100%;
   }
 }
+
+/*style the items (options), including the selected item:*/
+.select-items div,.select-selected {
+  color: #ffffff;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+  user-select: none;
+}
+
+/*style items (options):*/
+.select-items {
+  position: absolute;
+  background-color: #4E7500;
+  top: 100%;
+  left: 0;
+  right: 0;
+  z-index: 99;
+}
+
+.passwrdfield {
+
+}
+
 </style>
+
   <head>
     <meta charset="utf-8">
     <title>Register Page</title>
-    <!-- <h1>Register for a new account</h1> -->
+    <!-- this is the captcha script -->
+    <script src="https://hcaptcha.com/1/api.js" async defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
+    <script src="../javascript/PassRequirements.js"></script>
+    <script>
+
+    $('#test').PassRequirements();
+    $('#password1').PassRequirements();
+  		// $('#passwrdfield').PassRequirements({
+      //   rules: {
+      //     minlength: {
+      //       text: "be at least minLength characters long",
+      //       minLength: 8,
+      //     },
+    	//     containSpecialChars: {
+      //       text: "Your input should contain at least minLength special character",
+      //       minLength: 1,
+      //       regex: new RegExp('([^!,%,&,@,#,$,^,*,?,_,~])', 'g')
+      //     },
+    	//     containLowercase: {
+      //       text: "Your input should contain at least minLength lower case character",
+      //       minLength: 1,
+      //       regex: new RegExp('[^a-z]', 'g')
+      //     },
+    	//     containUppercase: {
+      //       text: "Your input should contain at least minLength upper case character",
+      //       minLength: 1,
+      //       regex: new RegExp('[^A-Z]', 'g')
+      //     },
+    	//     containNumbers: {
+      //       text: "Your input should contain at least minLength number",
+      //       minLength: 1,
+      //       regex: new RegExp('[^0-9]', 'g')
+      //     }
+      //   }
+      // });
+  	</script>
+    <script src="../javascript/checkpw.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $("#password2").keyup(validate);
+      });
+      function validate() {
+        var password1 = $("#password1").val();
+        var password2 = $("#password2").val();
+        if(password1 == password2 && password1!=null && password2!=null) {
+          $("#passwordMessage").html("<font color=\"green\"><b>Passwords Match</b></font>");
+          // $("input[type=submit]").prop("disabled", false);
+          document.getElementById("registerbtn").disabled = false;
+          // $('#Button').removeAttr('disabled');
+        }else {
+          $("#passwordMessage").html("<font color=\"red\"><b>Check Passwords</b></font>");
+          // $("input[type=submit]").prop("disabled", true);
+          document.getElementById("registerbtn").disabled = true;
+          // $('#Button').attr('disabled','disabled');
+        }
+      }
+
+      $(document).ready(function() {
+        $("#emailInput").keyup(validateEmail);
+      });
+
+      function validateEmail() {
+        var email = $("#emailInput").val();
+        var mailformat = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+        if(email.match(mailformat)) {
+          $("#emailMessage").html("<font color=\"green\"><b>Email Format Valid</b></font>");
+          $("input[type=submit]").prop("disabled", false);
+          // document.getElementById("button").disabled = true;
+          // $('#Button').removeAttr('disabled');
+        }else {
+          $("#emailMessage").html("<font color=\"red\"><b>Invalid Email Input</b></font>");
+          $("input[type=submit]").prop("disabled", true);
+          // document.getElementById("button").disabled = true;
+          // $('#Button').attr('disabled','disabled');
+        }
+      }
+    </script>
   </head>
   <body>
-    <form action="/success.html" method="post" name="form">
+    <input id="test" class="form-control">
+    <form action="confirmation.html" method="post" name="form">
       <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
 
-      <label for="fname"><b>First Name</b></label>
-      <input type="text" placeholder="Enter First Name" name="fname" required>
+        <label for="fname"><b>First Name</b></label>
+        <input type="text" placeholder="Enter First Name" name="fname" required>
 
-      <label for="lname"><b>Last Name</b></label>
-      <input type="text" placeholder="Enter Last Name" name="lname" required>
+        <label for="lname"><b>Last Name</b></label>
+        <input type="text" placeholder="Enter Last Name" name="lname" required>
 
-      <label for="email"><b>Email</b></label>
-      <input type="email" placeholder="Enter Email" name="email" required>
+        <label for="email"><b>Email</b></label>
+        <input type="email" placeholder="Enter Email" id="emailInput" name="email" required>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+        <label for="usrname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" id="usrname" name="usrname" required>
 
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+        <label for="psw"><b>Password</b></label>
+        <input type="password" id ="password1" class = "passwrdfield" placeholder="Enter Password" name="psw" maxlength="50" required>
 
-      <label for="birthday"><b>Birthday</b></label>
-      <input type="date" placeholder="Enter Birthday" name="birthday" required>
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <input type="password" id ="password2" placeholder="Repeat Password" name="psw-repeat" maxlength="50" required>
 
-      <label>
-        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-      </label>
+        <!-- <label for="psw"><b>Password</b></label>
+        <input type="password" id="password" class="form-control" name="passwordType" aria-label="Enter a password:" onkeyup="getPassword()"/>
+        <button id="togglePW" class="btn btn-secondary" type="button" style="cursor:pointer;" onclick="togglePassword();">Show Password</button>
 
-      <div class="clearfix">
-        <a style="text-decoration:none;" href="login.html">
-          <button type="button" class="cancelbtn">Cancel</button>
-        </a>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <input type="password" id="password" class="form-control" name="passwordType" aria-label="Enter a password:" onkeyup="getPassword()"/>
+        <button id="togglePW" class="btn btn-secondary" type="button" style="cursor:pointer;" onclick="togglePassword();">Show Password</button> -->
+
+        <label for="birthday"><b>Birthday</b></label>
+        <input type="date" placeholder="Enter Birthday" name="birthday" required>
+
+        <!-- question lists: https://sites.google.com/site/pwordsecuritykate/home/list-of-ideas-security-questions -->
+        <label for="question1"><b>Security Question 1:
+          <select name="securityQuestion" id="Security Question 1">
+            <option value="nickname">What was your childhood nickname?</option>
+            <option value="school">What school did you attend for sixth grade?</option>
+            <option value="teacher">What was the last name of your third grade teacher?</option>
+            <option value="job">In what city or town was your first job?</option>
+          </select></b></label>
+        <input type="text" placeholder="Security Question 1" name="question1" required>
+
+        <label for="question2"><b>Security Question 2:
+          <select name="securityQuestion" id="Security Question 2">
+            <option value="nickname">What was your childhood nickname?</option>
+            <option value="school">What school did you attend for sixth grade?</option>
+            <option value="teacher">What was the last name of your third grade teacher?</option>
+            <option value="job">In what city or town was your first job?</option>
+          </select></b></label>
+        <input type="text" placeholder="Security Question 2" name="question 2" required>
+
+        <label for="question3"><b>Security Question 3:
+          <select name="securityQuestion" id="Security Question 3">
+            <option value="nickname">What was your childhood nickname?</option>
+            <option value="school">What school did you attend for sixth grade?</option>
+            <option value="teacher">What was the last name of your third grade teacher?</option>
+            <option value="job">In what city or town was your first job?</option>
+          </select></b></label>
+        <input type="text" placeholder="Security Question 3" name="birthday" required>
+
+
+        <div class="h-captcha" data-sitekey="ebc443a9-6d76-4817-93a6-a8c725a54020"></div>
+
+        <!-- <label>
+          <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+        </label> -->
+        <p><span id="passwordMessage"></span></p>
+        <p><span id="emailMessage"></span></p>
+        <div class="clearfix">
+          <a style="text-decoration:none;" href="login.html">
+            <button type="button" class="cancelbtn" >Cancel</button>
+          </a>
+          <button type="submit" class="signupbtn" id="registerbtn">Sign Up</button>
+        </div>
+        <!-- <div class="clearfix">
+          <a style="text-decoration:none;" href="login.html">
+            <button type="button" class="cancelbtn">Cancel</button>
+          </a>
+          <a style="text-decoration:none;" href="login.html">
+            <button type="submit" class="signupbtn" value="Sign Up" id="submit" disabled="disabled"><a href="login.html">Sign in here</a></button>
+          </a>
+      </div> -->
       </div>
-    </div>
-
-      <!-- <div class ="container">
-        <label>First Name:</label>
-        <input type="text" name= "firstName" class="container" required><br><br>
-      </div>
-
-      <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" name="lastName"><br><br>
-      <label for="birthDate">Birthday:</label>
-      <input type="text" id="birthDate" name="birthDate"><br><br>
-      <label for="email">Email:</label>
-      <input type="text" id="email" name="email"><br><br>
-      <label for="password">Password:</label>
-      <input type="text" id="password" name="password"><br><br>
-      <label for="passwordConfirm">Confirm Password:</label>
-      <input type="text" id="passwordConfirm" name="passwordConfirm"><br><br>
-      <input type="submit" value="submit">
-    </form> -->
-    <!-- <a href="registerConfirmation.html"><button type="button" name="button">Create Account</button> -->
+    </form>
   </body>
 </html>
