--- a/html/register.html
+++ b/html/register.html
@@ -41,11 +41,11 @@ button:hover {
   padding: 14px 20px;
   background-color: #f44336;
 }
-
 /* Float cancel and signup buttons and add an equal width */
 .cancelbtn, .signupbtn {
   width: auto;
   padding: 10px 18px;
+  color: white;
 }
 
 /* Add padding to container elements */
@@ -155,44 +155,9 @@ text-decoration: none;
     <title>Register Page</title>
     <!-- this is the captcha script -->
     <script src="https://hcaptcha.com/1/api.js" async defer></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
-    <script src="../javascript/PassRequirements.js"></script>
-    <script>
 
-    $('#test').PassRequirements();
-    $('#password1').PassRequirements();
-  		// $('#passwrdfield').PassRequirements({
-      //   rules: {
-      //     minlength: {
-      //       text: "be at least minLength characters long",
-      //       minLength: 8,
-      //     },
-    	//     containSpecialChars: {
-      //       text: "Your input should contain at least minLength special character",
-      //       minLength: 1,
-      //       regex: new RegExp('([^!,%,&,@,#,$,^,*,?,_,~])', 'g')
-      //     },
-    	//     containLowercase: {
-      //       text: "Your input should contain at least minLength lower case character",
-      //       minLength: 1,
-      //       regex: new RegExp('[^a-z]', 'g')
-      //     },
-    	//     containUppercase: {
-      //       text: "Your input should contain at least minLength upper case character",
-      //       minLength: 1,
-      //       regex: new RegExp('[^A-Z]', 'g')
-      //     },
-    	//     containNumbers: {
-      //       text: "Your input should contain at least minLength number",
-      //       minLength: 1,
-      //       regex: new RegExp('[^0-9]', 'g')
-      //     }
-      //   }
-      // });
-  	</script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../javascript/checkpw.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
@@ -236,13 +201,11 @@ text-decoration: none;
     </script>
   </head>
   <body>
-    <input id="test" class="form-control">
     <form action="confirmation.html" method="post" name="form">
       <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
-
         <label for="fname"><b>First Name</b></label>
         <input type="text" placeholder="Enter First Name" name="fname" required>
 
@@ -325,4 +288,38 @@ text-decoration: none;
       </div>
     </form>
   </body>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="../javascript/PassRequirements.js"></script>
+  <script>
+  $('#password1').PassRequirements({
+    popoverPlacement: 'right',
+    rules: {
+      minlength: {
+        text: "be at least minLength characters long",
+        minLength: 10,
+      },
+      containSpecialChars: {
+        text: "Your input should contain at least minLength special character",
+        minLength: 1,
+        regex: new RegExp('([^!,%,&,@,#,$,^,*,?,_,~])', 'g')
+      },
+      containLowercase: {
+        text: "Your input should contain at least minLength lower case character",
+        minLength: 1,
+        regex: new RegExp('[^a-z]', 'g')
+      },
+      containUppercase: {
+        text: "Your input should contain at least minLength upper case character",
+        minLength: 1,
+        regex: new RegExp('[^A-Z]', 'g')
+      },
+      containNumbers: {
+        text: "Your input should contain at least minLength number",
+        minLength: 1,
+        regex: new RegExp('[^0-9]', 'g')
+      }
+    }
+  });
+</script>
 </html>
