rest of the code

--- a/html/register.html
+++ b/html/register.html
@@ -105,16 +105,16 @@ hr {
 }
 
 .form input[type=submit]:hover,.form input[type=submit]:active,.form input[type=submit]:focus {
-background: #017daf;
+  background: #017daf;
 }
 .form .message {
-margin: 15px 0 0;
-color: #b3b3b3;
-font-size: 12px;
+  margin: 15px 0 0;
+  color: #b3b3b3;
+  font-size: 12px;
 }
 .form .message a {
-color: #017daf;
-text-decoration: none;
+  color: #017daf;
+  text-decoration: none;
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
@@ -237,7 +237,7 @@ text-decoration: none;
 
         <!-- question lists: https://sites.google.com/site/pwordsecuritykate/home/list-of-ideas-security-questions -->
         <label for="question1"><b>Security Question 1:
-          <select name="securityQuestion" id="Security Question 1">
+          <select name="securityQuestion1" id="Security Question 1">
             <option value="nickname">What was your childhood nickname?</option>
             <option value="school">What school did you attend for sixth grade?</option>
             <option value="teacher">What was the last name of your third grade teacher?</option>
@@ -246,22 +246,22 @@ text-decoration: none;
         <input type="text" placeholder="Security Question 1" name="question1" required>
 
         <label for="question2"><b>Security Question 2:
-          <select name="securityQuestion" id="Security Question 2">
+          <select name="securityQuestion2" id="Security Question 2">
             <option value="nickname">What was your childhood nickname?</option>
             <option value="school">What school did you attend for sixth grade?</option>
             <option value="teacher">What was the last name of your third grade teacher?</option>
             <option value="job">In what city or town was your first job?</option>
           </select></b></label>
-        <input type="text" placeholder="Security Question 2" name="question 2" required>
+        <input type="text" placeholder="Security Question 2" name="question2" required>
 
         <label for="question3"><b>Security Question 3:
-          <select name="securityQuestion" id="Security Question 3">
+          <select name="securityQuestion3" id="Security Question 3">
             <option value="nickname">What was your childhood nickname?</option>
             <option value="school">What school did you attend for sixth grade?</option>
             <option value="teacher">What was the last name of your third grade teacher?</option>
             <option value="job">In what city or town was your first job?</option>
           </select></b></label>
-        <input type="text" placeholder="Security Question 3" name="birthday" required>
+        <input type="text" placeholder="Security Question 3" name="question3" required>
 
 
         <div class="h-captcha" data-sitekey="ebc443a9-6d76-4817-93a6-a8c725a54020"></div>
