--- a/html/forgot.html
+++ b/html/forgot.html
@@ -5,13 +5,18 @@ body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
 /* Full-width input fields */
-input[type=email] {
+input[type=email], [type=text] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
   background: #f1f1f1;
+  font-size: 14px;
+}
+
+label[for=email], [for=question1], [for=question2], [for=question3] {
+  font-size: 16px;
 }
 
 /* Add a background color when the inputs get focus */
@@ -39,13 +44,24 @@ button:hover {
 /* Extra styles for the cancel button */
 .forgotPassBtn {
   padding: 14px 20px;
+  background-color: #4E7500;
+  color: white;
+  float: right;
+}
+
+.cancelbtn {
+  padding: 14px 20px;
   background-color: #f44336;
+  color: white;
+  float: left;
 }
 
 /* Float cancel and signup buttons and add an equal width */
-.forgotPassBtn {
+.forgotPassBtn, .cancelbtn {
   width: auto;
   padding: 10px 18px;
+  font-size: 14px;
+  display: block;
 }
 
 /* Add padding to container elements */
@@ -53,6 +69,11 @@ button:hover {
   padding: 16px;
 }
 
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -110,22 +131,87 @@ hr {
      width: 100%;
   }
 }
+
+.forgotusrnameform, .forgotpasswrdform {
+  margin: 15px 0 0;
+  font-size: 12px;
+  display: none;
+}
+
+
 </style>
   <head>
     <meta charset="utf-8">
-    <title>Forgot Password</title>
+    <title>Forgot Username and Password</title>
+    <script src="https://hcaptcha.com/1/api.js" async defer></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <!-- <h1>Forgot Password</h1> -->
   </head>
   <body>
     <div class="container">
-      <form action="/forgot.php">
-        <h1>Forgot Password</h1>
-        <p>Please enter your email to retrieve your password.</p>
+      <h1>Forgot Username and Password</h1>
+      <input type = "radio" id = "forgotusr" name = "forgot" value = "username" class = "forgotusrname">
+      <label for="username">Forgot Username</label>
+
+      <input type = "radio" id = "forgotpsw" name = "forgot" value = "password" class = "forgotpasswrd">
+      <label for="password">Forgot Password</label>
+      <hr>
+      <div class = "forgotpasswrdform">
+        <form action="/forgot.php">
+          <h1>Forgot Password</h1>
+          <h5>Please enter your email to retrieve your password.</h5>
+          <hr>
+          <label for="email"><b>Email</b></label>
+          <input type="email" placeholder="Enter Email" name="email" required>
+        </form>
+        <div class="h-captcha" data-sitekey="ebc443a9-6d76-4817-93a6-a8c725a54020"></div>
         <hr>
-        <label for="email"><b>Email</b></label>
-        <input type="email" placeholder="Enter Email" name="email" required>
-      </form>
-      <button type="submit" class="forgotPassBtn">Forgot Password</button>
+        <button type="submit" class="forgotPassBtn">Send Email</button>
+        <!-- <br> -->
+        <a style="text-decoration:none;" href="login.html">
+          <button type="button" class="cancelbtn" >Cancel</button>
+        </a>
+      </div>
+
+      <div class = "forgotusrnameform">
+        <form action="/forgot.php">
+          <h1>Forgot Username</h1>
+          <h5>Please answer your security questions and enter your email to retrieve your username.</h5>
+          <hr>
+
+          <label for="email"><b>Email</b></label>
+          <input type="email" placeholder="Enter Email" name="email" required>
+
+          <label for="question1"><b>Security Question #1</b></label>
+          <input type="text" placeholder="Enter Security Question #1 Answer" name="question1" required>
+
+          <label for="question2"><b>Security Question #2</b></label>
+          <input type="text" placeholder="Enter Security Question #2 Answer" name="question2" required>
+
+          <label for="question3"><b>Security Question #3</b></label>
+          <input type="text" placeholder="Enter Security Question #3 Answer" name="question3" required>
+        </form>
+        <div class="h-captcha" data-sitekey="ebc443a9-6d76-4817-93a6-a8c725a54020"></div>
+        <hr>
+        <button type="submit" class="forgotPassBtn">Send Email</button>
+        <!-- <br> -->
+        <a style="text-decoration:none;" href="login.html">
+          <button type="button" class="cancelbtn" >Cancel</button>
+        </a>
+      </div>
+
+
     </div>
   </body>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+  <script type="text/javascript">
+  $(".forgotusrname").click(() => {
+    $(".forgotusrnameform").show();
+    $(".forgotpasswrdform").hide();
+   });
+  $(".forgotpasswrd").click(() => {
+    $(".forgotpasswrdform").show();
+    $(".forgotusrnameform").hide();
+  });
+  </script>
 </html>
