--- a/html/login.html
+++ b/html/login.html
@@ -174,8 +174,8 @@ span.psw {
     </div>
 
     <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <label for="usrname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="usrname" required>
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
