added indexes for the questions

--- a/html/register.html
+++ b/html/register.html
@@ -238,28 +238,34 @@ hr {
         <!-- question lists: https://sites.google.com/site/pwordsecuritykate/home/list-of-ideas-security-questions -->
         <label for="question1"><b>Security Question 1:
           <select name="securityQuestion1" id="Security Question 1">
-            <option value="nickname">What was your childhood nickname?</option>
-            <option value="school">What school did you attend for sixth grade?</option>
-            <option value="teacher">What was the last name of your third grade teacher?</option>
-            <option value="job">In what city or town was your first job?</option>
+            <option value="" disabled selected>Choose Security Question</option>
+            <option value="0">What was your childhood nickname?</option>
+            <option value="1">What school did you attend for sixth grade?</option>
+            <option value="2">What was the last name of your third grade teacher?</option>
+            <option value="3">In what city or town was your first job?</option>
+            <option value="4">How do you smell farts?</option>
           </select></b></label>
         <input type="text" placeholder="Security Question 1" name="question1" required>
 
         <label for="question2"><b>Security Question 2:
           <select name="securityQuestion2" id="Security Question 2">
-            <option value="nickname">What was your childhood nickname?</option>
-            <option value="school">What school did you attend for sixth grade?</option>
-            <option value="teacher">What was the last name of your third grade teacher?</option>
-            <option value="job">In what city or town was your first job?</option>
+            <option value="" disabled selected>Choose Security Question</option>
+            <option value="0">What was your childhood nickname?</option>
+            <option value="1">What school did you attend for sixth grade?</option>
+            <option value="2">What was the last name of your third grade teacher?</option>
+            <option value="3">In what city or town was your first job?</option>
+            <option value="4">How do you smell farts?</option>
           </select></b></label>
         <input type="text" placeholder="Security Question 2" name="question2" required>
 
         <label for="question3"><b>Security Question 3:
           <select name="securityQuestion3" id="Security Question 3">
-            <option value="nickname">What was your childhood nickname?</option>
-            <option value="school">What school did you attend for sixth grade?</option>
-            <option value="teacher">What was the last name of your third grade teacher?</option>
-            <option value="job">In what city or town was your first job?</option>
+            <option value="" disabled selected>Choose Security Question</option>
+            <option value="0">What was your childhood nickname?</option>
+            <option value="1">What school did you attend for sixth grade?</option>
+            <option value="2">What was the last name of your third grade teacher?</option>
+            <option value="3">In what city or town was your first job?</option>
+            <option value="4">How do you smell farts?</option>
           </select></b></label>
         <input type="text" placeholder="Security Question 3" name="question3" required>
 
