--- a/html/login.html
+++ b/html/login.html
@@ -156,7 +156,7 @@ span.psw {
 </head>
 <body>
 
-<h2>Comp 424 Login Project</h2>
+<h2>Comp 424 Da Squad</h2>
 
 <div class="container">
   <div class="horizontal-center">
