--- a/html/forgot.html
+++ b/html/forgot.html
@@ -144,7 +144,7 @@ hr {
     <meta charset="utf-8">
     <title>Forgot Username and Password</title>
     <script src="https://hcaptcha.com/1/api.js" async defer></script>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <!-- <h1>Forgot Password</h1> -->
   </head>
   <body>
