--- a/html/register.html
+++ b/html/register.html
@@ -224,14 +224,6 @@ hr {
         <label for="psw-repeat"><b>Repeat Password</b></label>
         <input type="password" id ="password2" placeholder="Repeat Password" name="psw-repeat" maxlength="50" required>
 
-        <!-- <label for="psw"><b>Password</b></label>
-        <input type="password" id="password" class="form-control" name="passwordType" aria-label="Enter a password:" onkeyup="getPassword()"/>
-        <button id="togglePW" class="btn btn-secondary" type="button" style="cursor:pointer;" onclick="togglePassword();">Show Password</button>
-
-        <label for="psw-repeat"><b>Repeat Password</b></label>
-        <input type="password" id="password" class="form-control" name="passwordType" aria-label="Enter a password:" onkeyup="getPassword()"/>
-        <button id="togglePW" class="btn btn-secondary" type="button" style="cursor:pointer;" onclick="togglePassword();">Show Password</button> -->
-
         <label for="birthday"><b>Birthday</b></label>
         <input type="date" placeholder="Enter Birthday" name="birthday" required>
 
@@ -296,7 +288,7 @@ hr {
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="../javascript/PassRequirements.js"></script>
+  <script src="../js/PassRequirements.js"></script>
   <script>
   $('#password1').PassRequirements({
     popoverPlacement: 'right',
