attempt 2 for login.php

--- a/html/register.html
+++ b/html/register.html
@@ -158,7 +158,7 @@ hr {
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    
+
     <script type="text/javascript">
       $(document).ready(function() {
         $("#password2").keyup(validate);
@@ -288,7 +288,7 @@ hr {
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="../js/PassRequirements.js"></script>
+  <script src="../javascript/PassRequirements.js"></script>
   <script>
   $('#password1').PassRequirements({
     popoverPlacement: 'right',
