--- a/html/register.html
+++ b/html/register.html
@@ -201,7 +201,7 @@ hr {
     </script>
   </head>
   <body>
-    <form action="confirmation.html" method="post" name="form">
+    <form action="register.php" method="post" name="form">
       <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
