--- a/html/register.html
+++ b/html/register.html
@@ -229,7 +229,8 @@ hr {
 
         <!-- question lists: https://sites.google.com/site/pwordsecuritykate/home/list-of-ideas-security-questions -->
         <label for="question1"><b>Security Question 1:
-          <select name="securityQuestion1" id="Security Question 1">
+          <!-- <select name="securityQuestion1" id="Security Question 1"> -->
+          <select name="securityQuestion1">
             <option value="" disabled selected>Choose Security Question</option>
             <option value="0">What was your childhood nickname?</option>
             <option value="1">What school did you attend for sixth grade?</option>
