--- a/html/register.html
+++ b/html/register.html
@@ -289,15 +289,32 @@ hr {
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="../javascript/PassRequirements.js"></script>
-  <script type="text/javascript" src="../pwstrength.js"></script>
+  <script src="../js/PassRequirements.js"></script>
+  <script type="text/javascript" src="../js/pwstrength.js"></script>
+  <script type="text/javascript">
+        jQuery(document).ready(function () {
+            "use strict";
+            var options = {
+                minChar: 8,
+                bootstrap3: true,
+                onLoad: function () {
+                    //$('#messages').text('Start typing password');
+                },
+                onKeyUp: function (evt) {
+                    $(evt.target).pwstrength("outputErrorList");
+                }
+
+            };
+            $('#password1').pwstrength(options);
+        });
+    </script>
   <script>
   $('#password1').PassRequirements({
     popoverPlacement: 'right',
     rules: {
       minlength: {
         text: "be at least minLength characters long",
-        minLength: 10,
+        minLength: 8,
       },
       containSpecialChars: {
         text: "Your input should contain at least minLength special character",
