changes to php code.
forgot username still needs work,
forgot php still needs to be added with the security questions

--- a/html/home.html
+++ b/html/home.html
@@ -112,7 +112,8 @@ hr {
       <!-- <button type="button" class="downloadBtn">Download Confidential Data</button> -->
 
       <!-- for some reason txt files open a new window/tab -->
-      <a download href="home.html">
+      <!-- <a download href="home.html"> -->
+      <a download href="confidential_data.txt">
         Download
       </a>
 
