--- a/html/resetUsername.html
+++ b/html/resetUsername.html
@@ -46,7 +46,6 @@ button:hover {
 .cancelbtn, .signupbtn {
   width: auto;
   padding: 10px 18px;
-  color: white;
 }
 
 /* Add padding to container elements */
@@ -128,12 +127,10 @@ text-decoration: none;
 
   <head>
     <meta charset="utf-8">
-    <title>Reset Password Page</title>
+    <title>Register Page</title>
     <!-- this is the captcha script -->
     <script src="https://hcaptcha.com/1/api.js" async defer></script>
-    <!-- <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script> -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function() {
   $("#password2").keyup(validate);
@@ -175,14 +172,14 @@ text-decoration: none;
     </script>
   </head>
   <body>
-    <form action="reset.php" method="post" name="form">
+    <form action="resetUsername.php" method="post" name="form">
       <div class="container">
-        <h1>Reset Password</h1>
+        <h1>Reset Username</h1>
+        <p>Please enter a new username and reset your password.</p>
         <hr>
-        <label for="uname"><b>Enter your username to verify your identity.</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" maxlength="50" required>
+        <label for="uname"><b>Username</b></label>
+        <input type="text" id ="uname" placeholder="Enter a new Username" name="uname" maxlength="50" required>
 
-        <p>Please enter a new password.</p>
         <label for="psw"><b>Password</b></label>
         <input type="password" id ="password1" placeholder="Enter Password" name="psw" maxlength="50" required>
 
@@ -212,56 +209,4 @@ text-decoration: none;
       </div>
     </form>
   </body>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="../js/PassRequirements.js"></script>
-  <script type="text/javascript" src="../js/pwstrength.js"></script>
-  <script type="text/javascript">
-        jQuery(document).ready(function () {
-            "use strict";
-            var options = {
-                minChar: 8,
-                bootstrap3: true,
-                onLoad: function () {
-                    //$('#messages').text('Start typing password');
-                },
-                onKeyUp: function (evt) {
-                    $(evt.target).pwstrength("outputErrorList");
-                }
-
-            };
-            $('#password1').pwstrength(options);
-        });
-    </script>
-  <script>
-    $('#password1').PassRequirements({
-      popoverPlacement: 'right',
-      rules: {
-        minlength: {
-          text: "be at least minLength characters long",
-          minLength: 8,
-        },
-        containSpecialChars: {
-          text: "Your input should contain at least minLength special character",
-          minLength: 1,
-          regex: new RegExp('([^!,%,&,@,#,$,^,*,?,_,~])', 'g')
-        },
-        containLowercase: {
-          text: "Your input should contain at least minLength lower case character",
-          minLength: 1,
-          regex: new RegExp('[^a-z]', 'g')
-        },
-        containUppercase: {
-          text: "Your input should contain at least minLength upper case character",
-          minLength: 1,
-          regex: new RegExp('[^A-Z]', 'g')
-        },
-        containNumbers: {
-          text: "Your input should contain at least minLength number",
-          minLength: 1,
-          regex: new RegExp('[^0-9]', 'g')
-        }
-      }
-    });
-  </script>
 </html>
