--- a/html/login.html
+++ b/html/login.html
@@ -152,11 +152,21 @@ span.psw {
      width: 100%;
   }
 }
+
+img {
+  width: 100%;
+  height: auto;
+}
+
 </style>
 </head>
 <body>
 
-<h2>Comp 424 Login Project</h2>
+<img src="https://drive.google.com/uc?export=view&id=1Fg1W845odC7r7Wk92BSxDG8YtMaSpYZr"
+	width="1326"
+	height="1080"/>
+
+
 
 <div class="container">
   <div class="horizontal-center">
@@ -166,7 +176,7 @@ span.psw {
 
 <div id="id01" class="modal">
 
-  <form class="modal-content animate" action="/login.php" method="post">
+  <form class="modal-content animate" action="login.php" method="post">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBc6w1uSMX4KRe3ymhUfTt7epM_UWjPMii-w&amp;usqp=CAU" alt="Avatar" class="avatar" style="width:225px;height:225px;">
@@ -174,8 +184,8 @@ span.psw {
     </div>
 
     <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+      <label for="usrname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="usrname" required>
 
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw" required>
