--- a/html/login.html
+++ b/html/login.html
@@ -77,6 +77,7 @@ img.avatar {
 .horizontal-center {
   margin: 0;
   position: absolute;
+  top: 70%;
   left: 48%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -152,16 +153,32 @@ span.psw {
      width: 100%;
   }
 }
+
+.container {
+  position: relative;
+  width: auto;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.container .btn:hover {
+    opacity: 0.8;
+}
+
 </style>
 </head>
 <body>
 
-<h2>Da Squad Login Page</h2>
-
 <div class="container">
-  <div class="horizontal-center">
-    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
-  </div>
+	<img src="https://drive.google.com/uc?export=view&id=1Fg1W845odC7r7Wk92BSxDG8YtMaSpYZr" alt="logo"
+		width="1326"
+		height="1080"/>
+      <div class="horizontal-center">
+		<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
+	  </div>
 </div>
 
 <div id="id01" class="modal">
